# mankkoo

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  Taskfile.yaml  agents.md  docker-compose.yaml  globals.css  layout.tsx  mkdocs.yml  package-lock.json  scripts-playground.ipynb
app/: Pipfile  (+5 more)
services/mankkoo/: .flake8  Dockerfile  README.md  agents.md  pyproject.toml  requirements.txt
services/mankkoo/.memory/: architecture.md  context.md  project.md  techContext.md
services/mankkoo/mankkoo/: app.py  base_logger.py  config.py  data_for_test.py  database.py  event_store.py  migration.py  notification_listener.py  total.py  views.py
services/mankkoo/mankkoo/account/: account.py  account_db.py  models.py
services/mankkoo/mankkoo/account/importer/: importer.py  pl.py  pl_ing.py  pl_mbank.py  pl_millenium.py
services/mankkoo/mankkoo/controller/: account_controller.py  admin_controller.py  investment_controller.py  main_controller.py  stream_controller.py
services/mankkoo/mankkoo/investment/: investment.py  investment_db.py
services/mankkoo/mankkoo/stream/: stream_db.py
services/mankkoo/mankkoo/util/: config.py  data_formatter.py
services/mankkoo/tests/: conftest.py  event_store_test.py  investment_test.py  total_test.py  views_test.py
services/mankkoo/tests/account/: account_test.py  importer_test.py
services/mankkoo/tests/controller/: account_controller_test.py  admin_controller_test.py  investment_controller_test.py  main_controller_test.py  stream_controller_test.py
services/mankkoo/tests/investment/: investment_db_test.py
services/mankkoo/tests/util/: data_formatter_test.py  ui_test.py
(+244 files in other folders)
